<resources>
    <string name="Please_enter_passcode">Please enter the verification code</string>
    <string name="add_more_skus_to_this_order">Select from catalogue</string>
    <string name="amount">Amount</string>
    <string name="as_of">As of %s</string>
    <string name="changepassword_confirm_password">Confirm password</string>
    <string name="changepassword_invalid_change_password">Change password failed, please try again.</string>
    <string name="changepassword_invalid_confirm_password">New password does not match Confirm password, please try again.</string>
    <string name="changepassword_invalid_new_password">Password</string>
    <string name="changepassword_invalid_old_password">Please enter old password.</string>
    <string name="changepassword_new_password">New password</string>
    <string name="changepassword_old_password">Current password</string>
    <string name="txt_other_upload_options">Other upload options</string>
    <string name="txt_other_upload_via_email">Upload via email</string>
    <string name="txt_send_invoices_to_email">Send invoices to</string>
    <string name="txt_send_email_show">samplename@zeemart.asia</string>
    <string name="txt_copy_email_address">Copy email address</string>
    <string name="txt_for_non_zm_order_uploads">For non-zeemart orders or uncategorised uploads</string>
    <string name="txt_email_copied">Copied!</string>
    <string name="changepassword_special_charcter_password">Min. 8 characters - at least 1 lowercase and uppercase letters, 1 number, and 1 symbol/special character.</string>
    <string name="changepassword_forgetten_your_password">If you have forgotten your current password, please sign out and then select ‘Forgot password?’ in the Login screen.</string>
    <string name="contact_supplier">Contact supplier</string>
    <string name="contact_supplier_call">Call</string>
    <string name="contact_supplier_choose_title">Choose App</string>
    <string name="contact_supplier_copy_add">Copy address</string>
    <string name="contact_supplier_email_copied">copied</string>
    <string name="contact_supplier_msg">Message</string>
    <string name="content_create_order_supplier_list_edt_search_supplier_hint">Search supplier</string>
    <string name="content_create_order_supplier_list_txt_create_new_order_text">Create a new order for</string>
    <string name="content_create_order_supplier_list_txt_ordering_for_text">Ordering for</string>
    <string name="content_filter_orders_txt_date_header_text">Date</string>
    <string name="content_filter_orders_txt_invoice_header_text">Invoice number</string>
    <string name="content_order_details_orderDetail_txt_header_documents_text">DOCUMENT</string>
    <string name="content_order_history_log_txt_no_activity_history_text">No activity history for this order</string>
    <string name="content_order_processing_textView3_text">Zeemart is currently processing your order</string>
    <string name="content_orders_edit_search_orders_hint">Search order ID</string>
    <string name="content_orders_txt_heading_past_14_days_text">PAST 14 DAYS</string>
    <string name="content_orders_txt_no_search_1_text">No result</string>
    <string name="content_product_detail_product_detail_description_data_text">No description provided</string>
    <string name="content_product_detail_product_detail_description_heading_text">Description</string>
    <string name="content_product_list_new_order_edt_search_hint">Search product</string>
    <string name="content_report_price_update_report_total_spending_header_text_text">Price updates</string>
    <string name="content_review_order_txt_supplier_name_review_order_text">Supplier Name</string>
    <string name="create_new_password">Create new password</string>
    <string name="delete_product">delete product</string>
    <string name="deliver_on">Deliver on</string>
    <string name="deliver_to">Deliver to</string>
    <string name="deliver_unconfirmed_cutoff">Dates marked (*) are unconfirmed - check with supplier</string>
    <string name="deliver_until_cutoff">Until %s</string>
    <string name="details">Details</string>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="dialog_cancel_order_submitBtn_text">Confirm cancellation</string>
    <string name="dialog_ok_button_text">OK</string>
    <string name="dialog_reject_order_noteTV_text">Your response will be sent to the order creator</string>
    <string name="dialog_reject_order_remarksET_hint">Add rejection reason for order creator (optional)</string>
    <string name="dialog_reject_order_submitBtn_text">Confirm rejection</string>
    <string name="dialog_select_diff_date">Select date</string>
    <string name="didnt_request_password_change">Didn\'t request this change?</string>
    <string name="email_fields_app_version">App version: %s \n</string>
    <string name="email_fields_desc_mistake">\nDescribe the mistake: \n\n</string>
    <string name="email_fields_device">Device: %s \n</string>
    <string name="email_fields_invoice_num">Invoice: %s \n</string>
    <string name="email_fields_name">\n\n--------------------\nName: %s \n</string>
    <string name="email_fields_order_id">Order: %s \n</string>
    <string name="email_fields_os_version">OS: Android %s \n</string>
    <string name="email_fields_supplier">Supplier: %s \n</string>
    <string name="email_fields_user_id">Login ID: %s \n</string>
    <string name="email_title_feedback">Feedback</string>
    <string name="email_title_subject">To upload, attach the invoices to this email and press send.</string>
    <string name="email_title_issue_mistake_invoice">Issue/Mistake - Invoice %s</string>
    <string name="email_title_issue_mistake_order">Issue/Mistake - Order %s</string>
    <string name="error_before_date">"End date before start date"</string>
    <string name="filter_tags_no_result">Try deselecting some filters to see items here</string>
    <string name="forgotpassword_back_to_login">Back to Login</string>
    <string name="forgotpassword_forgot_password">Request password reset</string>
    <string name="forgotpassword_invalid_email_add">Invalid Email, please try again.</string>
    <string name="format_approved_by">Approved by %s %s</string>
    <string name="format_cancelled_by">Cancelled by %s %s</string>
    <string name="format_created_by">Created by %s %s</string>
    <string name="format_invoice_number">Invoice #%s %s</string>
    <string name="format_item_unavailable"><![CDATA[<b>Item unavailable in %s</b>]]> - select another uom</string>
    <string name="format_items">%d item(s)</string>
    <string name="format_moq">MOQ %s %s</string>
    <string name="format_moq_is"><![CDATA[<b>MOQ is %s %s</b>]]></string>
    <string name="format_next_delivery">Next delivery: %s</string>
    <string name="format_next_delivery_short_desc">Next Delivery: %s . %s</string>
    <string name="format_not_enough_stock"><![CDATA[<b>Not enough stock</b>]]> - only %s %s left</string>
    <string name="format_past_orders_selected">%s past orders selected</string>
    <string name="format_rejected_by">Rejected by %s %s</string>
    <string name="format_showing_orders_placed">Showing %d orders (%d placed)</string>
    <string name="format_sold_by">Sold by %s</string>
    <string name="format_txt_page_number">%s / %s</string>
    <string name="format_txt_version">Version %s ©%s Zeemart.</string>
    <string name="format_updated_on">Updated on %s</string>
    <string name="format_value_files">%s files</string>
    <string name="format_current_date_to_past_90_days">Past 90 days</string>
    <string name="fragment_home_txt_home_action_required_text">Action required</string>
    <string name="fragment_home_txt_home_continue_ordering_text">Continue ordering</string>
    <string name="fragment_home_txt_home_view_all_orders_text">View all deliveries for today</string>
    <string name="fragment_home_txt_home_view_place_orders_text">View placed orders</string>
    <string name="fragment_report_dashboard_month_dashboard_report_month_90_days_message_text">Data older than 90 days are not shown in the app</string>
    <string name="fragment_select_outlet_txt_choose_delivery_location_text">Select outlet</string>
    <string name="fragment_spending_by_sku_spending_details_report_dashboard_week_txt_date_range_text">Average daily spend</string>
    <string name="fragment_spendingby_skuprice_history_txt_total_spending_detail_heading_text">Price per</string>
    <string name="fragment_spendingby_skuprice_history_txt_case">Case</string>
    <string name="fragment_spendingby_skuprice_history_txt_update_history_heading_text">Update history</string>
    <string name="header_notification">Notifications</string>
    <string name="holiday_eve">Eve of public holiday</string>
    <string name="holiday_ph">Public holiday</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="increase_price">increase price</string>
    <string name="invoice_date">Invoice date</string>
    <string name="due_date">Due date</string>
    <string name="lang_bahasa_indonesia">Bahasa Indonesia</string>
    <string name="lang_bahasa_melayu">Bahasa Melayu</string>
    <string name="lang_chinese">中文</string>
    <string name="lang_english">English</string>
    <string name="lang_select_language">Select a language:</string>
    <string name="lang_tamil">தமிழ்</string>
    <string name="lang_value_language">English</string>
    <string name="lang_vietnamese">Tiếng Việt</string>
    <string name="lang_hindi">हिन्दी</string>
    <string name="layout_add_product_notes_textView5_text">Notes for this item</string>
    <string name="layout_cancel_order_dialog_btn_do_not_cancel_order_text">No</string>
    <string name="layout_change_product_quantity_txt_change_quantity_header_text">Edit quantity</string>
    <string name="layout_change_product_quantity_txt_dec_quant_moq_text">MOQ</string>
    <string name="layout_delivery_dates_deliveryDates_header_text_1_text">Select delivery date</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_cancel_order_btn_text">Cancel order</string>
    <string name="txt_done">Done</string>
    <string name="txt_download_pdf">Download PDF</string>
    <string name="txt_receive">Receive</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_report_issue_or_mistake">Report issue or mistake</string>
    <string name="txt_view_report_by">View report by</string>
    <string name="txt_view_report_week">Week</string>
    <string name="txt_view_report_month">Month</string>
    <string name="txt_total">Total</string>
    <string name="txt_view_as_pdf">View as PDF</string>
    <string name="txt_invoice_total">Invoice total</string>
    <string name="txt_payment_processing_fee">Payment processing fee</string>
    <string name="txt_payment_processing_fee_data">Waived</string>
    <string name="txt_pay">Pay %1$s</string>
    <string name="txt_payment_terms">By making this payment, I agree to abide by the</string>
    <string name="txt_available_credit">%1$s credits available.</string>
    <string name="txt_use_credit">Use credit</string>
    <string name="txt_credits">Credits</string>
    <string name="txt_remove_credit">Remove</string>
    <string name="txt_unavailable_supplier">Currently unavailable for ordering</string>
    <string name="txt_unavailable_supplier_msg">Please try again later or check that there are no outstanding payments to this supplier.</string>
    <string name="txt_add_new">Add new</string>
    <string name="txt_we_ll_show_you_deals_and_items_available_for_the_location">We’ll show you deals and items available for the location.</string>
    <string name="txt_country">Country</string>
    <string name="txt_singapore">Singapore</string>
    <string name="txt_address">Delivery address</string>
    <string name="txt_type_postal_code_or_address">Type address</string>
    <string name="txt_enter_an_delivery_address">Enter delivery address</string>
</resources>