<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_small_dialog_failure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_unavailable_supplier"
        android:gravity="center"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="15dp"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/txt_small_dialog_failure_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/txt_unavailable_supplier_msg"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"/>
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/dialog_ok_button_text"
        android:textAllCaps="false"
        android:textColor="@color/text_blue"
        android:textSize="16sp"
         />
</LinearLayout>
