<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zeemart.asia.buyers.selfOnBoarding.EnterAddressActivity">

    <RelativeLayout
        android:id="@+id/lyt_back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/bt_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:src="@drawable/blue_left_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/bt_back_btn"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txt_enter_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_enter_an_delivery_address"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_will_show_deals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/txt_we_ll_show_you_deals_and_items_available_for_the_location"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:text="@string/txt_country"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txt_singapore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textColor="@color/black"
                    android:text="@string/txt_singapore"
                    android:textSize="16sp" />
            </RelativeLayout>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey_solid"/>
            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/txt_address"
                android:textSize="12sp" />
            <LinearLayout
                android:id="@+id/lyt_search_places"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_postal_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/txt_type_postal_code_or_address"
                    android:textSize="16sp" />
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/grey_solid"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lyt_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txt_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txt_done"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
