<?xml version="1.0" encoding="utf-8" standalone="no"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/lyt_order_total">

    <RelativeLayout
        android:id="@+id/dismiss_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lyt_order_total"
        android:background="@color/translucent" />

    <RelativeLayout
        android:id="@+id/lyt_order_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_rounded_corner"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/lyt_use_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/grey_rounded_corner"
            android:padding="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/txt_available_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_available_credit"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_use_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/txt_use_credit"
                    android:textColor="@color/color_azul_two"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lyt_invoice_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_use_credit"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/txt_invoice_total_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_invoice_total"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_invoice_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                tools:text="$125.00" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/lyt_remove_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_invoice_total"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/txt_credits"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_remove_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/txt_credits"
                android:padding="5dp"
                android:text="@string/txt_remove_credit"
                android:textColor="@color/color_azul_two"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_credit_fee_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/green"
                android:textSize="16sp"
                tools:text="-$125.00" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lyt_processing_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_remove_credit"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/txt_process_fee_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_payment_processing_fee"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_process_fee_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/txt_process_fee_tag"
                android:layout_alignParentRight="true"
                android:text="@string/txt_payment_processing_fee_data"
                android:textColor="@color/green"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/lyt_processing_fee"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/faint_grey" />

        <RelativeLayout
            android:id="@+id/lyt_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_divider3">

            <TextView
                android:id="@+id/txt_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/txt_total"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/lyt_add_new_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/blueadd" />

                <TextView
                    android:id="@+id/txt_add_new_Card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/txt_add_new"
                    android:textColor="@color/color_azul_two"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_card_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_card"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/txt_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="$125.00" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyt_total"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/green_rounded_corner"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:text="@string/txt_pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_payment_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_pay"
            android:gravity="center"
            android:text="@string/txt_payment_terms"
            android:textColor="@color/dark_grey"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>

