<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="130dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <TextView
        android:id="@+id/txt_view_report_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/txt_view_report_by"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
            android:id="@+id/txt_week_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/txt_view_report_week"/>

            <ImageView
                android:id="@+id/img_select_week"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:visibility="gone"
                android:src="@drawable/bluetick"
                 />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/txt_month_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/txt_view_report_month"/>

            <ImageView
                android:id="@+id/img_select_month"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="25dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="25dp"
                android:visibility="gone"
                android:src="@drawable/bluetick"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_cancel_view_report"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:background="@drawable/faintgrey_solid_round_corner"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:layout_gravity="end"
            android:layout_marginEnd="25dp"
            android:visibility="gone"
            android:textColor="@color/text_blue_dark"
            android:textSize="16sp" />


    </LinearLayout>

</LinearLayout>